--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,4 +15,5 @@ install:
 
 
 build_script:
+  - ./gradlew test -Dselenide.headless=true
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
