--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,5 +15,4 @@ install:
 
 
 build_script:
-  - ./gradlew test -Dselenide.headless=true
-  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  - ./gradlew test --info "-Dselenide.headless=true"  # запускаем тест, флаг --info позволяет выводить больше информации
